Solución botonera y pie de página

--- a/prctica_1_transacciones_http.html
+++ b/prctica_1_transacciones_http.html
@@ -155,6 +155,6 @@ Content-Type: <strong>text/html</strong>; charset=ISO-8859-1
 </div>
 </div>
 </div>
-<script type="text/javascript" src="_class_presentation_js.js"></script>
+<script type="text/javascript" src="class_presentation_js.js"></script>
 	<script type="text/javascript" src="prism.js"></script>
-	<script type="text/javascript" src="_class_presentation_rgc_js.js"></script></body></html>
+	<script type="text/javascript" src="class_presentation_rgc_js.js"></script></body></html>
