--- a/04_el_estndar_http10.html
+++ b/04_el_estndar_http10.html
@@ -171,6 +171,6 @@ Content-Type : text/HTML Content-Length : 1245 Last-Modified : 11 May 2006 08:29
 </div>
 </div>
 </div>
-<script type="text/javascript" src="_class_presentation_js.js"></script>
+<script type="text/javascript" src="class_presentation_js.js"></script>
 	<script type="text/javascript" src="prism.js"></script>
-	<script type="text/javascript" src="_class_presentation_rgc_js.js"></script></body></html>
+	<script type="text/javascript" src="class_presentation_rgc_js.js"></script></body></html>
