--- a/06_servidores_virtuales.html
+++ b/06_servidores_virtuales.html
@@ -200,6 +200,6 @@ DocumentRoot </span>"/var/www/serveisenxarxa/public_html"<strong>
 </div>
 </div>
 </div>
-<script type="text/javascript" src="_class_presentation_js.js"></script>
+<script type="text/javascript" src="class_presentation_js.js"></script>
 	<script type="text/javascript" src="prism.js"></script>
-	<script type="text/javascript" src="_class_presentation_rgc_js.js"></script></body></html>
+	<script type="text/javascript" src="class_presentation_rgc_js.js"></script></body></html>
