--- a/22_caractersticas_de_http.html
+++ b/22_caractersticas_de_http.html
@@ -113,6 +113,6 @@
 </div>
 </div>
 </div>
-<script type="text/javascript" src="_class_presentation_js.js"></script>
+<script type="text/javascript" src="class_presentation_js.js"></script>
 	<script type="text/javascript" src="prism.js"></script>
-	<script type="text/javascript" src="_class_presentation_rgc_js.js"></script></body></html>
+	<script type="text/javascript" src="class_presentation_rgc_js.js"></script></body></html>
