Solución contadores de página

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="01_introduccin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<span class="page-counter">Página <strong>1</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="01_introduccin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -128,7 +128,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="01_introduccin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<span class="page-counter">Página <strong>1</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="01_introduccin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
