--- a/01_introduccin.html
+++ b/01_introduccin.html
@@ -69,7 +69,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="index.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="02_el_protocolo_http.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="index.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>2</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="02_el_protocolo_http.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -95,7 +95,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="index.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="02_el_protocolo_http.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="index.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>2</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="02_el_protocolo_http.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
