--- a/02_el_protocolo_http.html
+++ b/02_el_protocolo_http.html
@@ -69,7 +69,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="01_introduccin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="21_un_poco_de_historia.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="01_introduccin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>3</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="21_un_poco_de_historia.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -82,7 +82,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="01_introduccin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="21_un_poco_de_historia.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="01_introduccin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>3</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="21_un_poco_de_historia.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
