--- a/03_etapas_de_una_transaccin_http.html
+++ b/03_etapas_de_una_transaccin_http.html
@@ -69,7 +69,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="22_caractersticas_de_http.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="04_el_estndar_http10.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="22_caractersticas_de_http.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>6</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="04_el_estndar_http10.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -128,7 +128,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="22_caractersticas_de_http.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="04_el_estndar_http10.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="22_caractersticas_de_http.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>6</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="04_el_estndar_http10.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
