--- a/04_el_estndar_http10.html
+++ b/04_el_estndar_http10.html
@@ -71,7 +71,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="03_etapas_de_una_transaccin_http.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="prctica_1_transacciones_http.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="03_etapas_de_una_transaccin_http.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>7</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="prctica_1_transacciones_http.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -167,7 +167,7 @@ Content-Type : text/HTML Content-Length : 1245 Last-Modified : 11 May 2006 08:29
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="03_etapas_de_una_transaccin_http.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="prctica_1_transacciones_http.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="03_etapas_de_una_transaccin_http.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>7</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="prctica_1_transacciones_http.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
