--- a/05_instalacin_y_configuracin_de_apache2.html
+++ b/05_instalacin_y_configuracin_de_apache2.html
@@ -71,7 +71,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="prctica_1_transacciones_http.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="prctica_2_instalacin_de_apache2.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="prctica_1_transacciones_http.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>9</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="prctica_2_instalacin_de_apache2.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -129,7 +129,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="prctica_1_transacciones_http.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="prctica_2_instalacin_de_apache2.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="prctica_1_transacciones_http.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>9</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="prctica_2_instalacin_de_apache2.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
