--- a/06_servidores_virtuales.html
+++ b/06_servidores_virtuales.html
@@ -71,7 +71,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="prctica_2_instalacin_de_apache2.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="prctica_3_configuracin_bsica.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="prctica_2_instalacin_de_apache2.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>11</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="prctica_3_configuracin_bsica.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -196,7 +196,7 @@ DocumentRoot </span>"/var/www/serveisenxarxa/public_html"<strong>
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="prctica_2_instalacin_de_apache2.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="prctica_3_configuracin_bsica.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="prctica_2_instalacin_de_apache2.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>11</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="prctica_3_configuracin_bsica.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
