--- a/07_acceso_annimo_y_autenticado_formas_de_autenticacin.html
+++ b/07_acceso_annimo_y_autenticado_formas_de_autenticacin.html
@@ -69,7 +69,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="prctica_3_configuracin_bsica.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="prctica_4_control_de_acceso_autorizacin_y_autenticacin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="prctica_3_configuracin_bsica.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>13</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="prctica_4_control_de_acceso_autorizacin_y_autenticacin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -94,7 +94,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="prctica_3_configuracin_bsica.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="prctica_4_control_de_acceso_autorizacin_y_autenticacin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="prctica_3_configuracin_bsica.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>13</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="prctica_4_control_de_acceso_autorizacin_y_autenticacin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
