--- a/08_ejecucin_de_cdigo_scripts_de_servidor_y_de_cliente.html
+++ b/08_ejecucin_de_cdigo_scripts_de_servidor_y_de_cliente.html
@@ -69,7 +69,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="prctica_4_control_de_acceso_autorizacin_y_autenticacin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="prctica_5_ejecucin_de_cdigo_en_el_cliente_y_en_el_servidor.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="prctica_4_control_de_acceso_autorizacin_y_autenticacin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>15</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="prctica_5_ejecucin_de_cdigo_en_el_cliente_y_en_el_servidor.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -89,7 +89,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="prctica_4_control_de_acceso_autorizacin_y_autenticacin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="prctica_5_ejecucin_de_cdigo_en_el_cliente_y_en_el_servidor.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="prctica_4_control_de_acceso_autorizacin_y_autenticacin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>15</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="prctica_5_ejecucin_de_cdigo_en_el_cliente_y_en_el_servidor.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
