--- a/10_mapa_conceptual.html
+++ b/10_mapa_conceptual.html
@@ -69,7 +69,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="prctica_6_asegurando_las_comunicaciones.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="11_cuestionario_de_repaso.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="prctica_6_asegurando_las_comunicaciones.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>19</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="11_cuestionario_de_repaso.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -94,7 +94,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="prctica_6_asegurando_las_comunicaciones.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="11_cuestionario_de_repaso.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="prctica_6_asegurando_las_comunicaciones.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>19</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="11_cuestionario_de_repaso.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
