--- a/11_cuestionario_de_repaso.html
+++ b/11_cuestionario_de_repaso.html
@@ -69,7 +69,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="10_mapa_conceptual.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="12_bibliografia.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="10_mapa_conceptual.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>20</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="12_bibliografia.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -120,7 +120,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="10_mapa_conceptual.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="12_bibliografia.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="10_mapa_conceptual.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>20</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="12_bibliografia.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
