--- a/12_bibliografia.html
+++ b/12_bibliografia.html
@@ -69,7 +69,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="11_cuestionario_de_repaso.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
+<a href="11_cuestionario_de_repaso.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>21</strong> de <strong>21</strong></span>
 </div>
 </div>
 <div id="main-wrapper">
@@ -91,7 +91,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="11_cuestionario_de_repaso.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
+<a href="11_cuestionario_de_repaso.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>21</strong> de <strong>21</strong></span>
 </div>
 </div>
 </div>
