--- a/22_caractersticas_de_http.html
+++ b/22_caractersticas_de_http.html
@@ -69,7 +69,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="21_un_poco_de_historia.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="03_etapas_de_una_transaccin_http.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="21_un_poco_de_historia.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>5</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="03_etapas_de_una_transaccin_http.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -109,7 +109,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="21_un_poco_de_historia.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="03_etapas_de_una_transaccin_http.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="21_un_poco_de_historia.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>5</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="03_etapas_de_una_transaccin_http.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
