--- a/prctica_1_transacciones_http.html
+++ b/prctica_1_transacciones_http.html
@@ -71,7 +71,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="04_el_estndar_http10.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="05_instalacin_y_configuracin_de_apache2.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="04_el_estndar_http10.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>8</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="05_instalacin_y_configuracin_de_apache2.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -151,7 +151,7 @@ Content-Type: <strong>text/html</strong>; charset=ISO-8859-1
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="04_el_estndar_http10.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="05_instalacin_y_configuracin_de_apache2.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="04_el_estndar_http10.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>8</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="05_instalacin_y_configuracin_de_apache2.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
