--- a/prctica_2_instalacin_de_apache2.html
+++ b/prctica_2_instalacin_de_apache2.html
@@ -69,7 +69,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="05_instalacin_y_configuracin_de_apache2.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="06_servidores_virtuales.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="05_instalacin_y_configuracin_de_apache2.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>10</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="06_servidores_virtuales.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -113,7 +113,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="05_instalacin_y_configuracin_de_apache2.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="06_servidores_virtuales.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="05_instalacin_y_configuracin_de_apache2.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>10</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="06_servidores_virtuales.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
