--- a/prctica_3_configuracin_bsica.html
+++ b/prctica_3_configuracin_bsica.html
@@ -71,7 +71,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="06_servidores_virtuales.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="07_acceso_annimo_y_autenticado_formas_de_autenticacin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="06_servidores_virtuales.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>12</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="07_acceso_annimo_y_autenticado_formas_de_autenticacin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -140,7 +140,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="06_servidores_virtuales.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="07_acceso_annimo_y_autenticado_formas_de_autenticacin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="06_servidores_virtuales.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>12</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="07_acceso_annimo_y_autenticado_formas_de_autenticacin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
