--- a/prctica_4_control_de_acceso_autorizacin_y_autenticacin.html
+++ b/prctica_4_control_de_acceso_autorizacin_y_autenticacin.html
@@ -69,7 +69,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="07_acceso_annimo_y_autenticado_formas_de_autenticacin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="08_ejecucin_de_cdigo_scripts_de_servidor_y_de_cliente.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="07_acceso_annimo_y_autenticado_formas_de_autenticacin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>14</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="08_ejecucin_de_cdigo_scripts_de_servidor_y_de_cliente.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -123,7 +123,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="07_acceso_annimo_y_autenticado_formas_de_autenticacin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="08_ejecucin_de_cdigo_scripts_de_servidor_y_de_cliente.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="07_acceso_annimo_y_autenticado_formas_de_autenticacin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>14</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="08_ejecucin_de_cdigo_scripts_de_servidor_y_de_cliente.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
