--- a/prctica_5_ejecucin_de_cdigo_en_el_cliente_y_en_el_servidor.html
+++ b/prctica_5_ejecucin_de_cdigo_en_el_cliente_y_en_el_servidor.html
@@ -71,7 +71,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="08_ejecucin_de_cdigo_scripts_de_servidor_y_de_cliente.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="09_establecimiento_de_conexiones_seguras.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="08_ejecucin_de_cdigo_scripts_de_servidor_y_de_cliente.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>16</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="09_establecimiento_de_conexiones_seguras.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -124,7 +124,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="08_ejecucin_de_cdigo_scripts_de_servidor_y_de_cliente.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="09_establecimiento_de_conexiones_seguras.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="08_ejecucin_de_cdigo_scripts_de_servidor_y_de_cliente.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>16</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="09_establecimiento_de_conexiones_seguras.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
