--- a/prctica_6_asegurando_las_comunicaciones.html
+++ b/prctica_6_asegurando_las_comunicaciones.html
@@ -69,7 +69,7 @@
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="09_establecimiento_de_conexiones_seguras.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="10_mapa_conceptual.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="09_establecimiento_de_conexiones_seguras.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>18</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="10_mapa_conceptual.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -100,7 +100,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="09_establecimiento_de_conexiones_seguras.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="10_mapa_conceptual.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="09_establecimiento_de_conexiones_seguras.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>18</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="10_mapa_conceptual.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
