Erratas de traducción

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </div>
 <div class="iDevice_wrapper objectivesIdevice em_iDevice em_iDevice_objectives" id="id2">
 <div class="iDevice emphasis1" >
-<div class="iDevice_header"><h2 class="iDeviceTitle">Continguts</h2></div>
+<div class="iDevice_header"><h2 class="iDeviceTitle">Contenidos</h2></div>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta2_43_2" class="block iDevice_content">
