Adición Actividad Evaluable Extraordinaria

--- a/11_mapa_conceptual.html
+++ b/11_mapa_conceptual.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>07| Acceso anónimo y autenticado. Formas de autenticación | UNIDAD 5. Servicio web (HTTP) </title>
+<title>11| Mapa conceptual | UNIDAD 5. Servicio web (HTTP) </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta http-equiv="content-language" content="es" />
 <meta name="author" content="Roberto González Cardenete" />
@@ -17,7 +17,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="prism.css">
 </head>
-<body class="exe-web-site exe-search-bar exe-atools" id="exe-node-12"><script type="text/javascript">document.body.className+=" js"</script>
+<body class="exe-web-site exe-search-bar exe-atools" id="exe-node-6"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
 <div id="header" ><div id="headerContent">UNIDAD 5. Servicio web (HTTP)</div></div>
@@ -47,8 +47,8 @@
       <li><a href="prctica_3_configuracin_bsica.html" class="no-ch">Práctica 3: Configuración básica</a></li>
    </ul>
    </li>
-   <li id="active"><a href="07_acceso_annimo_y_autenticado_formas_de_autenticacin.html" class="active daddy">07| Acceso anónimo y autenticado. Formas de autenticación</a>
-   <ul>
+   <li><a href="07_acceso_annimo_y_autenticado_formas_de_autenticacin.html" class="daddy">07| Acceso anónimo y autenticado. Formas de autenticación</a>
+   <ul class="other-section">
       <li><a href="prctica_4_control_de_acceso_autorizacin_y_autenticacin.html" class="no-ch">Práctica 4: Control de acceso, autorización y autenticación</a></li>
    </ul>
    </li>
@@ -63,28 +63,28 @@
    </ul>
    </li>
    <li><a href="10u5aevext_instalacin_de_un_servidor_apache_con_dominio_y_certificado_ssl.html" class="no-ch">10|U5.AEVExt. Instalación de un servidor Apache con dominio y certificado SSL</a></li>
-   <li><a href="11_mapa_conceptual.html" class="no-ch">11| Mapa conceptual</a></li>
+   <li id="active"><a href="11_mapa_conceptual.html" class="active no-ch">11| Mapa conceptual</a></li>
    <li><a href="12_cuestionario_de_repaso.html" class="no-ch">12| Cuestionario de repaso</a></li>
    <li><a href="13_bibliografia.html" class="no-ch">13| Bibliografia</a></li>
 </ul>
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="prctica_3_configuracin_bsica.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>13</strong> de <strong>22</strong></span> <span class="sep">| </span><a href="prctica_4_control_de_acceso_autorizacin_y_autenticacin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="10u5aevext_instalacin_de_un_servidor_apache_con_dominio_y_certificado_ssl.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>20</strong> de <strong>22</strong></span> <span class="sep">| </span><a href="12_cuestionario_de_repaso.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
 <div id="main"><a name="main"></a>
-<div id="nodeDecoration"><h1 id="nodeTitle">07| Acceso anónimo y autenticado. Formas de autenticación</h1></div>
-<div class="iDevice_wrapper FreeTextIdevice" id="id27">
+<div id="nodeDecoration"><h1 id="nodeTitle">11| Mapa conceptual</h1></div>
+<div class="iDevice_wrapper FreeTextfpdIdevice" id="id9">
 <div class="iDevice emphasis0">
-<div id="ta27_86" class="block iDevice_content">
-<p>En los siguientes enlaces dispones de la información necesaria para aprender a:</p>
-<ul>
-<li>Controlar el acceso a los recursos del servidor. (<a href="https://httpd.apache.org/docs/2.4/es/howto/access.html" target="_blank" rel="noopener noreferrer">https://httpd.apache.org/docs/2.4/es/howto/access.html</a>)</li>
-<li>Aprender a configurar archivos <code>.htaccess</code> (<a href="https://httpd.apache.org/docs/2.4/es/howto/htaccess.htm">https://httpd.apache.org/docs/2.4/es/howto/htaccess.htm</a>)</li>
-<li>Proteger el acceso a determinados recursos mediante sistemas de autenticación. (<a href="https://httpd.apache.org/docs/2.4/es/howto/auth.html" target="_blank" rel="noopener noreferrer">https://httpd.apache.org/docs/2.4/es/howto/auth.html</a>)</li>
-</ul>
+<div id="ta9_154" class="block iDevice_content">
+<div class="exe-figure exe-image position-center" style="width: 799px;">
+<div class="figcaption header"><strong>Mapa conceptual: el servicio web (HTTP)</strong></div>
+<img src="HTTP.png" alt="Mapa conceptual: el servei HTTP" width="799" height="453" />
+<div class="figcaption"><span class="author">Vicent Jordà</span>. <span class="title"><em>Mapa conceptual: el servicio web (HTTP)</em></span></div>
+</div>
+<p></p>
 </div>
 </div>
 </div>
@@ -95,7 +95,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="prctica_3_configuracin_bsica.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>13</strong> de <strong>22</strong></span> <span class="sep">| </span><a href="prctica_4_control_de_acceso_autorizacin_y_autenticacin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="10u5aevext_instalacin_de_un_servidor_apache_con_dominio_y_certificado_ssl.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>20</strong> de <strong>22</strong></span> <span class="sep">| </span><a href="12_cuestionario_de_repaso.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
