--- a/12_cuestionario_de_repaso.html
+++ b/12_cuestionario_de_repaso.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>07| Acceso anónimo y autenticado. Formas de autenticación | UNIDAD 5. Servicio web (HTTP) </title>
+<title>12| Cuestionario de repaso | UNIDAD 5. Servicio web (HTTP) </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta http-equiv="content-language" content="es" />
 <meta name="author" content="Roberto González Cardenete" />
@@ -17,7 +17,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="prism.css">
 </head>
-<body class="exe-web-site exe-search-bar exe-atools" id="exe-node-12"><script type="text/javascript">document.body.className+=" js"</script>
+<body class="exe-web-site exe-search-bar exe-atools" id="exe-node-7"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
 <div id="header" ><div id="headerContent">UNIDAD 5. Servicio web (HTTP)</div></div>
@@ -47,8 +47,8 @@
       <li><a href="prctica_3_configuracin_bsica.html" class="no-ch">Práctica 3: Configuración básica</a></li>
    </ul>
    </li>
-   <li id="active"><a href="07_acceso_annimo_y_autenticado_formas_de_autenticacin.html" class="active daddy">07| Acceso anónimo y autenticado. Formas de autenticación</a>
-   <ul>
+   <li><a href="07_acceso_annimo_y_autenticado_formas_de_autenticacin.html" class="daddy">07| Acceso anónimo y autenticado. Formas de autenticación</a>
+   <ul class="other-section">
       <li><a href="prctica_4_control_de_acceso_autorizacin_y_autenticacin.html" class="no-ch">Práctica 4: Control de acceso, autorización y autenticación</a></li>
    </ul>
    </li>
@@ -64,27 +64,53 @@
    </li>
    <li><a href="10u5aevext_instalacin_de_un_servidor_apache_con_dominio_y_certificado_ssl.html" class="no-ch">10|U5.AEVExt. Instalación de un servidor Apache con dominio y certificado SSL</a></li>
    <li><a href="11_mapa_conceptual.html" class="no-ch">11| Mapa conceptual</a></li>
-   <li><a href="12_cuestionario_de_repaso.html" class="no-ch">12| Cuestionario de repaso</a></li>
+   <li id="active"><a href="12_cuestionario_de_repaso.html" class="active no-ch">12| Cuestionario de repaso</a></li>
    <li><a href="13_bibliografia.html" class="no-ch">13| Bibliografia</a></li>
 </ul>
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<a href="prctica_3_configuracin_bsica.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>13</strong> de <strong>22</strong></span> <span class="sep">| </span><a href="prctica_4_control_de_acceso_autorizacin_y_autenticacin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="11_mapa_conceptual.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>21</strong> de <strong>22</strong></span> <span class="sep">| </span><a href="13_bibliografia.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
 <div id="main"><a name="main"></a>
-<div id="nodeDecoration"><h1 id="nodeTitle">07| Acceso anónimo y autenticado. Formas de autenticación</h1></div>
-<div class="iDevice_wrapper FreeTextIdevice" id="id27">
-<div class="iDevice emphasis0">
-<div id="ta27_86" class="block iDevice_content">
-<p>En los siguientes enlaces dispones de la información necesaria para aprender a:</p>
-<ul>
-<li>Controlar el acceso a los recursos del servidor. (<a href="https://httpd.apache.org/docs/2.4/es/howto/access.html" target="_blank" rel="noopener noreferrer">https://httpd.apache.org/docs/2.4/es/howto/access.html</a>)</li>
-<li>Aprender a configurar archivos <code>.htaccess</code> (<a href="https://httpd.apache.org/docs/2.4/es/howto/htaccess.htm">https://httpd.apache.org/docs/2.4/es/howto/htaccess.htm</a>)</li>
-<li>Proteger el acceso a determinados recursos mediante sistemas de autenticación. (<a href="https://httpd.apache.org/docs/2.4/es/howto/auth.html" target="_blank" rel="noopener noreferrer">https://httpd.apache.org/docs/2.4/es/howto/auth.html</a>)</li>
-</ul>
+<div id="nodeDecoration"><h1 id="nodeTitle">12| Cuestionario de repaso</h1></div>
+<div class="iDevice_wrapper activityIdevice em_iDevice em_iDevice_activity" id="id12">
+<div class="iDevice emphasis1" >
+<div class="iDevice_header"><h2 class="iDeviceTitle">Cuestionario de repaso</h2></div>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta12_41_2" class="block iDevice_content">
+<p style="margin-top: 0.35cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; orphans: 0; widows: 0;" align="justify">Responde:</p>
+<ol>
+<li>Definición del protocolo HTTP. Características y funciones. Diferencias respecto a HTTPS.</li>
+<li>¿Cómo funciona el protocolo HTTP? Explica cada paso.</li>
+<li>¿Qué tipos de peticiones puede solicitar el cliente al servidor HTTP? ¿En qué consiste cada una?</li>
+<li>Tipos MIME. Definición y objetivos. Da 3 ejemplos.</li>
+<li>Códigos de estado. Definición. Objetivos. Grupos.</li>
+<li>Diferencia entre servidor web y cliente web.</li>
+<li>¿Qué son las cookies?</li>
+<li>¿Qué es un servidor web seguro? ¿Qué protocolos utiliza?</li>
+<li>Define los siguientes conceptos:
+<ol>
+<li>Firma digital</li>
+<li>Certificado digital</li>
+<li>Autoridad certificadora</li>
+<li>Certificado de servidor seguro</li>
+</ol>
+</li>
+<li>Explica los pasos del funcionamiento del protocolo HTTPS.</li>
+<li>¿Qué es un servidor web virtual? ¿Qué métodos existen y en qué consisten?</li>
+<li>¿Qué acciones debemos realizar para tener un alojamiento basado en dominio?</li>
+<li>Si al acceder a un directorio de nuestra web, da un error de acceso, ¿a qué puede deberse? ¿Cómo podemos solucionarlo?</li>
+<li>¿Por qué algunos tipos de documentos los abre el navegador directamente y otros necesitan programas externos?</li>
+<li>¿Para qué sirve la autenticación en un sitio web?</li>
+<li>¿Cuáles son los principales servidores web que se utilizan? ¿Qué diferencias hay entre ellos?</li>
+<li>¿Qué diferencias existen entre páginas web estáticas y dinámicas?</li>
+</ol>
+</div>
+</div>
 </div>
 </div>
 </div>
@@ -95,7 +121,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<a href="prctica_3_configuracin_bsica.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>13</strong> de <strong>22</strong></span> <span class="sep">| </span><a href="prctica_4_control_de_acceso_autorizacin_y_autenticacin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="11_mapa_conceptual.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>21</strong> de <strong>22</strong></span> <span class="sep">| </span><a href="13_bibliografia.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
