--- a/index.html
+++ b/index.html
@@ -63,14 +63,15 @@
       <li><a href="prctica_6_asegurando_las_comunicaciones.html" class="no-ch">Práctica 6: Asegurando las comunicaciones</a></li>
    </ul>
    </li>
-   <li><a href="10_mapa_conceptual.html" class="no-ch">10| Mapa conceptual</a></li>
-   <li><a href="11_cuestionario_de_repaso.html" class="no-ch">11| Cuestionario de repaso</a></li>
-   <li><a href="12_bibliografia.html" class="no-ch">12| Bibliografia</a></li>
+   <li><a href="10u5aevext_instalacin_de_un_servidor_apache_con_dominio_y_certificado_ssl.html" class="no-ch">10|U5.AEVExt. Instalación de un servidor Apache con dominio y certificado SSL</a></li>
+   <li><a href="11_mapa_conceptual.html" class="no-ch">11| Mapa conceptual</a></li>
+   <li><a href="12_cuestionario_de_repaso.html" class="no-ch">12| Cuestionario de repaso</a></li>
+   <li><a href="13_bibliografia.html" class="no-ch">13| Bibliografia</a></li>
 </ul>
 </div>
 <div id='topPagination'>
 <div class="pagination noprt">
-<span class="page-counter">Página <strong>1</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="01_introduccin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<span class="page-counter">Página <strong>1</strong> de <strong>22</strong></span> <span class="sep">| </span><a href="01_introduccin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 <div id="main-wrapper">
@@ -128,7 +129,7 @@
 </div>
 <div id='bottomPagination'>
 <div class="pagination noprt">
-<span class="page-counter">Página <strong>1</strong> de <strong>21</strong></span> <span class="sep">| </span><a href="01_introduccin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<span class="page-counter">Página <strong>1</strong> de <strong>22</strong></span> <span class="sep">| </span><a href="01_introduccin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </div>
 </div>
 </div>
